# OpenRune-Launcher

./: .gitignore  SETUP.md  build-linux-aarch64.sh  build-linux-x86_64.sh  build-osx-aarch64.sh  build-osx-x64.sh  build-win-aarch64.sh  build-win32.sh  build-win64.sh  build.gradle.kts  gradle.properties  pom.xml  setup.ps1
.github/workflows/: CI.yml
innosetup/: app.iss  app32.iss  arch64.iss  dircheck.pas  runelite.iss  runelite32.iss  runeliteaarch64.iss  upgrade.pas  usernamecheck.pas
native/src/: CMakeLists.txt
native/src/win32/: app.rc
packr/: linux-aarch64-config.json  linux-x64-config.json  macos-aarch64-config.json  win-x64-config.json
src/main/java/net/runelite/launcher/: CertPathExtractor.java  ColorScheme.java  ConfigurationFrame.java  FatalErrorDialog.java  FilesystemPermissions.java  ForkLauncher.java  JagexLauncherCompatibility.java  JavaInstaller.java  JvmLauncher.java  Launcher.java  LauncherProperties.java  LauncherSettings.java  PackrConfig.java  ReflectionLauncher.java  SplashScreen.java  TrustManagerUtil.java  Updater.java
src/main/java8/net/runelite/launcher/: CertPathExtractor.java
src/main/resources/: java_versions.properties  logback.xml
src/main/resources/net/runelite/launcher/: launcher.properties  runelite.crt
tools/: update-jre.py
